@@ -2675,11 +2675,11 @@
 				>
 			</File>
 			<File
-				RelativePath="CMemoryReadFile.cpp"
+				RelativePath="CMemoryFile.cpp"
 				>
 			</File>
 			<File
-				RelativePath="CMemoryReadFile.h"
+				RelativePath="CMemoryFile.h"
 				>
 			</File>
 			<File
